# velcro-asm

./: .gitignore  CMakeLists.txt  README.md
arch/x86_64_nasm/: parser.go  parser_test.go
asm/: arch.cc  arch.h  instructions.cc  instructions.h  pseudo.cc  pseudo.h  punctuation.cc  punctuation.h  syntax_error.h  token.cc  token.h  tokenizer.cc  tokenizer.h
general/: error.cc  error.h
utils/: xerror.cc  xerror.h  xstring.cc  xstring.h
